--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libft"]
 	path = libft
 	url = https://github.com/glllcs/libft.git
+[submodule "test/pft"]
+	path = test/pft
+	url = https://github.com/gavinfielder/pft.git
